--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^8.4.5",
+    "@react-native-firebase/auth": "^9.3.0",
+    "@react-native-firebase/firestore": "^7.8.6",
+    "@react-native-firebase/storage": "^7.4.9",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-paper": "4.2.0",
