--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/auth": "^9.3.0",
     "@react-native-firebase/firestore": "^7.8.6",
     "@react-native-firebase/storage": "^7.4.9",
+    "@react-navigation/drawer": "^5.10.1",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "react": "16.13.1",
@@ -26,7 +27,9 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
-    "react-native-vector-icons": "7.1.0"
+    "react-native-vector-icons": "7.1.0",
+    "react-navigation": "^4.4.3",
+    "react-navigation-drawer": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
