--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@react-native-firebase/auth": "^9.3.0",
     "@react-native-firebase/firestore": "^7.8.6",
     "@react-native-firebase/storage": "^7.4.9",
-    "@react-navigation/drawer": "^5.10.1",
     "@react-navigation/bottom-tabs": "5.10.0",
+    "@react-navigation/drawer": "^5.10.1",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "react": "16.13.1",
@@ -25,11 +25,14 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "2.3.4",
     "react-native-paper": "4.2.0",
+    "react-native-pell-rich-editor": "^1.3.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "7.1.0",
+    "react-native-webview": "^10.10.0",
     "react-navigation": "^4.4.3",
+    "react-navigation-bottom-tabs": "^1.0.2",
     "react-navigation-drawer": "^2.6.0"
   },
   "devDependencies": {
