--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@react-navigation/core": "^5.14.3",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "eslint-plugin-react-hooks": "^4.2.0",
