--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "firebase": "8.0.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^3.0.3",
     "@react-native-firebase/app": "^8.4.5",
     "@react-native-firebase/auth": "^9.3.0",
     "@react-native-firebase/firestore": "^7.8.6",
@@ -21,6 +21,7 @@
     "@react-navigation/material-top-tabs": "^5.3.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "firebase": "8.0.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-fs": "2.16.6",
