--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "8.0.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-chart-kit": "^6.7.0",
     "react-native-fs": "2.16.6",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "2.3.4",
@@ -32,6 +33,7 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "7.1.0",
     "react-native-webview": "^10.10.0",
